name:                vector-sized
version:             0.6.1.0
synopsis:            Size tagged vectors
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vector-sized#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          whats.our.vector.victor@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Data
build-type:          Simple
extra-source-files:  readme.md
                   , changelog.md
cabal-version:       >=1.10

-- nice literals are not enabled on GHC 8.4; see
-- https://github.com/DavidM-D/indexed-list-literals/issues/1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Sized
                     , Data.Vector.Generic.Sized
                     , Data.Vector.Generic.Sized.Internal
                     , Data.Vector.Storable.Sized
                     , Data.Vector.Mutable.Sized
                     , Data.Vector.Generic.Mutable.Sized
                     , Data.Vector.Storable.Mutable.Sized
                     , Data.Vector.Generic.Mutable.Sized.Internal
  build-depends:       base >= 4.9 && < 5
                     , vector >= 0.11 && < 0.13
                     , deepseq >= 1.1 && < 1.5
                     , finite-typelits >= 0.1
                     , primitive >= 0.5 && < 0.7
  if impl(ghc < 8.3)
    build-depends: indexed-list-literals >= 0.1.0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vector-sized
