name:                vector-sized
version:             1.0.4.0
synopsis:            Size tagged vectors
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vector-sized#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          whats.our.vector.victor@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Data
build-type:          Simple
extra-source-files:  readme.md
                   , changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Sized
                     , Data.Vector.Generic.Sized
                     , Data.Vector.Generic.Sized.Internal
                     , Data.Vector.Storable.Sized
                     , Data.Vector.Mutable.Sized
                     , Data.Vector.Generic.Mutable.Sized
                     , Data.Vector.Storable.Mutable.Sized
                     , Data.Vector.Generic.Mutable.Sized.Internal
  build-depends:       base >= 4.9 && < 5
                     , vector >= 0.11 && < 0.13
                     , deepseq >= 1.1 && < 1.5
                     , finite-typelits >= 0.1
                     , primitive >= 0.5 && < 0.7
                     , indexed-list-literals >= 0.2.0.0
                     , adjunctions >= 4.3 && < 4.5
                     , distributive >= 0.5 && < 0.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vector-sized
