cabal-version: 3.0
name:           vector-sized
version:        1.6.0
synopsis:       Size tagged vectors
description:    Please see README.md
category:       Data
homepage:       https://github.com/expipiplus1/vector-sized#readme
bug-reports:    https://github.com/expipiplus1/vector-sized/issues
author:         Ellie Hermaszewska
maintainer:     whats.our.vector.victor@monoid.al
copyright:      2016 Ellie Hermaszewska
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC ==8.10.7 || ==9.0.1 || ==9.2.1
extra-source-files:
    readme.md
    changelog.md
    default.nix

source-repository head
  type: git
  location: https://github.com/expipiplus1/vector-sized

library
  exposed-modules:
      Data.Vector.Generic.Mutable.Sized
      Data.Vector.Generic.Mutable.Sized.Internal
      Data.Vector.Generic.Sized
      Data.Vector.Generic.Sized.Internal
      Data.Vector.Mutable.Sized
      Data.Vector.Primitive.Mutable.Sized
      Data.Vector.Primitive.Sized
      Data.Vector.Sized
      Data.Vector.Storable.Mutable.Sized
      Data.Vector.Storable.Sized
      Data.Vector.Unboxed.Mutable.Sized
      Data.Vector.Unboxed.Sized
  hs-source-dirs:
      src
  build-depends:
      adjunctions >=4.3 && <4.5
    , base >=4.14 && <5
    , binary >=0.8.3.0
    , comonad >=4 && <6
    , deepseq >=1.1 && <1.5
    , distributive >=0.5 && <0.7
    , finite-typelits >=0.1
    , hashable >=1.2.4.0
    , indexed-list-literals >=0.2.0.0
    , primitive >=0.5 && <0.9
    , indexed-traversable >=0.1.2 && <0.2
    , vector >=0.12 && <0.14
  default-language: Haskell2010
